# Virtual_Badge

./: .gitignore  Build  CMakeLists.txt  README.md  sdkconfig
Model/: Display.FCStd  Model.FCStd
Model/outside/: Display.FCStd
cmake/: avr-gcc-toolchain.cmake
docs/: card_reader_design.md
scripts/: flash.sh  flash_esp32.sh  flash_nano.sh
src/: CMakeLists.txt  card_reader.c  card_reader.h  display.c  display.h  main.c
src/apps/: animator.c  animator.h
src/apps/animator/: animator.c  animator.h
src/apps/debug/: debug.c  debug.h
src/apps/nfc_reader/: nfc_reader.c  nfc_reader.h
src/drivers/: display.c
src/drivers/card_reader/: card_reader_api.c  card_reader_api.h  card_reader_common.h  card_reader_core.c  card_reader_core.h  card_reader_fat.c  card_reader_fat.h  card_reader_spi.c  card_reader_spi.h
src/drivers/display/: display_api.c  display_api.h  display_core.c  display_core.h  display_spi.c  display_spi.h
src/hal/: hal.h  hal_atmega328p.c  hal_esp32.cpp  hal_esp32_idf.c  hal_esp32_target_esp32.h  hal_esp32_target_esp32s3.h  hal_esp32_target_select.h
src/system/app_mgr/: app_mgr_api.c  app_mgr_api.h  app_mgr_common.h  app_mgr_core.c  app_mgr_core.h  app_mgr_tasks.c  app_mgr_tasks.h
src/system/expansions_detector/: expansions_detector.c  expansions_detector.h  expansions_devices.h
src/system/render/: render_api.c  render_api.h  render_cache.c  render_cache.h  render_common.h  render_core.c  render_core.h  render_image.c  render_image.h  render_text.c  render_text.h
tools/: composite_overlays.py  downscale_pngs.py  png_to_rgb565.py
